--- a/2)Assignments/Assignment10(ExceptionHnadling)solution/exceptionhandlingquestions.ipynb
+++ b/2)Assignments/Assignment10(ExceptionHnadling)solution/exceptionhandlingquestions.ipynb
@@ -275,8 +275,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "708c53c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "code is executed\n",
+      "{'name': 'John', 'age': 30}\n",
+      "Expecting value: line 1 column 1 (char 0)\n",
+      "code is executed\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "def parse_json(json_string):\n",
+    "    try:\n",
+    "        data = json.loads(json_string)\n",
+    "        return data\n",
+    "    except json.JSONDecodeError as ex:\n",
+    "        print(ex)\n",
+    "        return None\n",
+    "    finally:\n",
+    "        print(\"code is executed\")\n",
+    "\n",
+    "print(parse_json('{\"name\": \"John\", \"age\": 30}'))\n",
+    "print(parse_json('Invalid JSON'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "0e2a2fa8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution completed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'{\\n  \"userId\": 1,\\n  \"id\": 1,\\n  \"title\": \"sunt aut facere repellat provident occaecati excepturi optio reprehenderit\",\\n  \"body\": \"quia et suscipit\\\\nsuscipit recusandae consequuntur expedita et cum\\\\nreprehenderit molestiae ut ut quas totam\\\\nnostrum rerum est autem sunt rem eveniet architecto\"\\n}'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "def read_url(url):\n",
+    "    try:\n",
+    "        responce = requests.get(url)\n",
+    "        responce.raise_for_status()\n",
+    "        return responce.text\n",
+    "    except requests.RequestException as re:\n",
+    "        print(f\"Network Error : {re}\")\n",
+    "        return None\n",
+    "\n",
+    "    finally:\n",
+    "        print(\"execution completed\")\n",
+    "\n",
+    "read_url(\"https://jsonplaceholder.typicode.com/posts/1\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "4cef0265",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Network Error : HTTPSConnectionPool(host='nonexistent.url', port=443): Max retries exceeded with url: / (Caused by NameResolutionError(\"<urllib3.connection.HTTPSConnection object at 0x000001708C1A4530>: Failed to resolve 'nonexistent.url' ([Errno 11001] getaddrinfo failed)\"))\n",
+      "execution completed\n"
+     ]
+    }
+   ],
+   "source": [
+    "read_url('https://nonexistent.url')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3efcf87",
    "metadata": {},
    "outputs": [],
    "source": []
