--- a/2)Assignments/Assignment10(ExceptionHnadling)solution/exceptionhandlingquestions.ipynb
+++ b/2)Assignments/Assignment10(ExceptionHnadling)solution/exceptionhandlingquestions.ipynb
@@ -371,8 +371,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "c3efcf87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Execution is completed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def lst_func(lst,index):\n",
+    "    try:\n",
+    "        element = lst[index]\n",
+    "    except IndexError as ie:\n",
+    "        print(ie)\n",
+    "        return None\n",
+    "    finally:\n",
+    "        print(\"Execution is completed\")\n",
+    "    return element\n",
+    "lst_func([2,5,8,6,3,8],3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "1e8e1cd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list index out of range\n",
+      "Execution is completed\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst_func([2,5,8,6,3,8],9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd34d423",
    "metadata": {},
    "outputs": [],
    "source": []
