--- a/2)Assignments/Assignment10(ExceptionHnadling)solution/exceptionhandlingquestions.ipynb
+++ b/2)Assignments/Assignment10(ExceptionHnadling)solution/exceptionhandlingquestions.ipynb
@@ -427,8 +427,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "bd34d423",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "conversion completed\n",
+      "Division completed\n",
+      "overall execution is completed\n",
+      "0.43478260869565216\n",
+      "invalid literal for int() with base 10: 'a'\n",
+      "conversion completed\n",
+      "overall execution is completed\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def nested_exception_handling(s):\n",
+    "    try:\n",
+    "        try:\n",
+    "            num =int(s)\n",
+    "        except ValueError as e:\n",
+    "            print(e)\n",
+    "            return None\n",
+    "        finally:\n",
+    "            print(\"conversion completed\")\n",
+    "        if num is not None:\n",
+    "            try:\n",
+    "                result = 10/num\n",
+    "            except ZeroDivisionError as ex:\n",
+    "                print(ex)\n",
+    "                result= None\n",
+    "            finally:\n",
+    "                print(\"Division completed\")\n",
+    "            return result\n",
+    "        \n",
+    "    finally:\n",
+    "        print(\"overall execution is completed\")\n",
+    "\n",
+    "print(nested_exception_handling(\"23\"))\n",
+    "print(nested_exception_handling('a'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8283a4ea",
    "metadata": {},
    "outputs": [],
    "source": []
