--- a/2)Assignments/Assignment10(ExceptionHnadling)solution/exceptionhandlingquestions.ipynb
+++ b/2)Assignments/Assignment10(ExceptionHnadling)solution/exceptionhandlingquestions.ipynb
@@ -475,8 +475,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "8283a4ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution completed\n",
+      "20\n",
+      "'grade'\n",
+      "execution completed\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def dict_operation(dict,key):\n",
+    "    try:\n",
+    "        value = dict[key]\n",
+    "    except KeyError as k:\n",
+    "        print(k)\n",
+    "        value = None\n",
+    "    finally:\n",
+    "        print(\"execution completed\")\n",
+    "    return value\n",
+    "print(dict_operation({'name':'vaibhs','age':20},'age'))\n",
+    "print(dict_operation({'name':'vaibhs','age':20},'grade'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "1cd74215",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error:invalid literal for int() with base 10: 'ad'\n",
+      "execution is completed\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def user_ip():\n",
+    "    try:\n",
+    "        num = int(input(\"enter a integer\"))\n",
+    "    except ValueError as ex:\n",
+    "        print(f\"Error:{ex}\")\n",
+    "        num = None\n",
+    "\n",
+    "    finally:\n",
+    "        print(\"execution is completed\")\n",
+    "    return num\n",
+    "print(user_ip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f465279",
    "metadata": {},
    "outputs": [],
    "source": []
