--- a/2)Assignments/Assignment10(ExceptionHnadling)solution/exceptionhandlingquestions.ipynb
+++ b/2)Assignments/Assignment10(ExceptionHnadling)solution/exceptionhandlingquestions.ipynb
@@ -537,11 +537,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "6f465279",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "execution is completed\n",
+      "28\n",
+      "Error : unsupported operand type(s) for +=: 'int' and 'str'\n",
+      "execution is completed\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sum_lst(lst):\n",
+    "    sum = 0\n",
+    "    try:\n",
+    "        for item in lst:\n",
+    "            sum += item\n",
+    "    except TypeError as te:\n",
+    "        print(f\"Error : {te}\")\n",
+    "        sum = None\n",
+    "    finally:\n",
+    "        print(\"execution is completed\")\n",
+    "    return sum\n",
+    "print(sum_lst([1,2,3,4,5,6,7]))\n",
+    "print(sum_lst(['a',1,2,3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "09fd21e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello\\nworld\\nname\\n'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def read_file(file_name):\n",
+    "    try:\n",
+    "        with open(file_name,'r') as file:\n",
+    "            content = file.read()\n",
+    "    except FileNotFoundError as fn:\n",
+    "        print(f\"Error:{fn}\")\n",
+    "    finally:\n",
+    "        try:\n",
+    "            file.close()\n",
+    "        except NameError:\n",
+    "            pass\n",
+    "    \n",
+    "\n",
+    "    return content\n",
+    "read_file('IO.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "f4f10e4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error : division by zero\n",
+      "Execution completely\n"
+     ]
+    }
+   ],
+   "source": [
+    "def division(a,b):\n",
+    "    try:\n",
+    "        result = a/b\n",
+    "    except ZeroDivisionError as zd:\n",
+    "        print(f\"Error : {zd}\")\n",
+    "        result = None\n",
+    "    finally:\n",
+    "        print(\"Execution completely\")\n",
+    "    return result\n",
+    "division(23,0)"
+   ]
   }
  ],
  "metadata": {
