--- a/1)Notes/8-OOP's/Classes&Objects.ipynb
+++ b/1)Notes/8-OOP's/Classes&Objects.ipynb
@@ -38,12 +38,12 @@
     "class Dog:\n",
     "    #constructor\n",
     "    def __init__(self,name,age):\n",
-    "        self.name=name #--> instance variable\n",
+    "        self.name=name #--> instance variable / attributes\n",
     "        self.age=age\n",
     "\n",
     "#creating objects\n",
-    "dog1=Dog(\"kolya\",\"3\")\n",
-    "dog2=Dog(\"champi\",\"2\")\n",
+    "dog1=Dog(\"kolya\",3)\n",
+    "dog2=Dog(\"champi\",2)\n",
     "\n",
     "print(dog1.name)\n",
     "print(dog2.name)"
@@ -51,10 +51,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "buddy says woof woof !!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Defining a class with instance methods\n",
+    "class Dog:\n",
+    "    def __init__(self,name,age):\n",
+    "        self.name=name\n",
+    "        self.age=age\n",
+    "    def bark(self):  # --> creating methods or functions in class\n",
+    "        print(f\"{self.name} says woof woof !!\")\n",
+    "\n",
+    "dog1=Dog(\"buddy\",3)\n",
+    "dog1.bark()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25000000 is withdraw . remaining balance is 499999975000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Modeling a bank account\n",
+    "class BankAccount:\n",
+    "    \n",
+    "    def __init__(self,owner,balance=0):\n",
+    "        self.owner=owner\n",
+    "        self.balance=balance\n",
+    "\n",
+    "    def deposit(self,amount):\n",
+    "        self.balance+=amount\n",
+    "        print(f\"{amount} is deposited. new balance is {self.balance}\")\n",
+    "    \n",
+    "    def withdraw(self,amount):\n",
+    "        if amount > self.balance:\n",
+    "            print(\"Insufficient funds\")\n",
+    "        else:\n",
+    "            self.balance-=amount\n",
+    "            print(f\"{amount} is withdraw . remaining balance is {self.balance}\")\n",
+    "\n",
+    "    def check_balance(self):\n",
+    "        return self.balance\n",
+    "    \n",
+    "account = BankAccount(\"vaibhs\",500000000000000)\n",
+    "account.withdraw(25000000)\n",
+    "\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
