--- a/1)Notes/8-OOP's/Inheritance.ipynb
+++ b/1)Notes/8-OOP's/Inheritance.ipynb
@@ -9,12 +9,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Inheritace\n",
-    "#parent class"
+    "#parent class\n",
+    "class Car:\n",
+    "    def __init__(self,windows,doors,enginetype):\n",
+    "        self.windows=windows\n",
+    "        self.doors=doors\n",
+    "        self.enginetype=enginetype\n",
+    "\n",
+    "    def drive(self):\n",
+    "        print(f\"The person will drive the {self.enginetype} car\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The person will drive the petrol car\n"
+     ]
+    }
+   ],
+   "source": [
+    "car1=Car(4,5,\"petrol\")\n",
+    "car1.drive()"
    ]
   },
   {
@@ -32,7 +59,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.7"
   }
  },
