--- a/1)Notes/8-OOP's/Inheritance.ipynb
+++ b/1)Notes/8-OOP's/Inheritance.ipynb
@@ -46,6 +46,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# child class --> Inherited class --> syntax is declare class name in ()\n",
+    "# use super() keyword to access parent class\n",
+    "class Tesla(Car):\n",
+    "    def __init__(self,windows,doors,enginetype,is_selfdriving):\n",
+    "        super().__init__(windows,doors,enginetype)\n",
+    "        self.is_selfdriving = is_selfdriving\n",
+    "\n",
+    "    def selfdriving(self):\n",
+    "        print(f\"Tesla supports self driving : {self.is_selfdriving}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tesla supports self driving : True\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "tesla1 = Tesla(4,5,\"electric\",True)\n",
+    "print(tesla1.selfdriving())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
