--- a/2)Assignments/Assignment11(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment11(class&objects)solution.ipynb
@@ -69,7 +69,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# QUe 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "id": "73c45126",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -91,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
