--- a/2)Assignments/Assignment11(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment11(class&objects)solution.ipynb
@@ -82,7 +82,9 @@
    "id": "73c45126",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# QUe 2)"
+   ]
   }
  ],
  "metadata": {
