--- a/1)Notes/8-OOP's/Inheritance.ipynb
+++ b/1)Notes/8-OOP's/Inheritance.ipynb
@@ -108,11 +108,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Que 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# QUe 2)"
    ]
   }
  ],
