--- a/1)Notes/8-OOP's/Inheritance.ipynb
+++ b/1)Notes/8-OOP's/Inheritance.ipynb
@@ -129,7 +129,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Que 3)"
+   ]
   }
  ],
  "metadata": {
