--- a/1)Notes/8-OOP's/Inheritance.ipynb
+++ b/1)Notes/8-OOP's/Inheritance.ipynb
@@ -103,7 +103,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Multiple inheritace\n"
+    "# Multiple inheritace --> when a class inherits from more than one base class.\n",
+    "\n"
    ]
   }
  ],
