--- a/1)Notes/8-OOP's/Inheritance.ipynb
+++ b/1)Notes/8-OOP's/Inheritance.ipynb
@@ -104,7 +104,23 @@
    "outputs": [],
    "source": [
     "# Multiple inheritace --> when a class inherits from more than one base class.\n",
-    "\n"
+    "\n",
+    "# Base class 1\n",
+    "class Animal:\n",
+    "    def __init__(self,name):\n",
+    "        self.name=name\n",
+    "\n",
+    "    def speak(self):\n",
+    "        print(\"subclass must implement this method\")\n",
+    "\n",
+    "# Base class 2\n",
+    "class Pet:\n",
+    "    def __init__(self,owner):\n",
+    "        self.owner=owner\n",
+    "\n",
+    "# Derived class\n",
+    "class Dog(Animal,Pet):\n",
+    "    def "
    ]
   }
  ],
