--- a/1)Notes/8-OOP's/Inheritance.ipynb
+++ b/1)Notes/8-OOP's/Inheritance.ipynb
@@ -99,9 +99,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buddy says woof\n",
+      "owner:krish\n"
+     ]
+    }
+   ],
    "source": [
     "# Multiple inheritace --> when a class inherits from more than one base class.\n",
     "\n",
@@ -120,8 +129,24 @@
     "\n",
     "# Derived class\n",
     "class Dog(Animal,Pet):\n",
-    "    def "
+    "    def __init__(self,name,owner):\n",
+    "        Animal.__init__(self,name)\n",
+    "        Pet.__init__(self,owner)  #insted of super we can use that this type of syntax--> class_name.__init__(parameters)\n",
+    "    def speak(self):\n",
+    "        return f\"{self.name} says woof\"\n",
+    "\n",
+    "# creating a objects\n",
+    "dog =Dog(\"Buddy\",\"krish\")\n",
+    "print(dog.speak())\n",
+    "print(f\"owner:{dog.owner}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
