--- a/1)Notes/8-OOP's/polymorphism.ipynb
+++ b/1)Notes/8-OOP's/polymorphism.ipynb
@@ -23,9 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "woof\n",
+      "meow\n",
+      "Sound of the animal\n"
+     ]
+    }
+   ],
    "source": [
     "# BAse class \n",
     "class Animal:\n",
@@ -36,7 +46,19 @@
     "class Dog(Animal):\n",
     "    def speak(self):\n",
     "        return \"woof\"  # function is again defined here with new meaning means function is overwritten\n",
-    "        "
+    "\n",
+    "\n",
+    "# derived class 2\n",
+    "class Cat(Animal):\n",
+    "    def speak(self):\n",
+    "        return \"meow\" # Again overwritten function here \n",
+    "\n",
+    "dog = Dog()\n",
+    "cat = Cat()\n",
+    "animal = Animal()\n",
+    "print(dog.speak())\n",
+    "print(cat.speak())\n",
+    "print(animal.speak())"
    ]
   },
   {
@@ -54,7 +76,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.7"
   }
  },
