--- a/1)Notes/8-OOP's/polymorphism.ipynb
+++ b/1)Notes/8-OOP's/polymorphism.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -31,8 +31,7 @@
      "output_type": "stream",
      "text": [
       "woof\n",
-      "meow\n",
-      "Sound of the animal\n"
+      "meow\n"
      ]
     }
    ],
@@ -55,10 +54,32 @@
     "\n",
     "dog = Dog()\n",
     "cat = Cat()\n",
-    "animal = Animal()\n",
     "print(dog.speak())\n",
     "print(cat.speak())\n",
-    "print(animal.speak())"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "woof\n",
+      "meow\n"
+     ]
+    }
+   ],
+   "source": [
+    "# function that demonstrate polymorphism\n",
+    "def animal_speak(animal):\n",
+    "    print(animal.speak())\n",
+    "\n",
+    "animal_speak(dog)\n",
+    "animal_speak(cat)"
    ]
   },
   {
