--- a/1)Notes/8-OOP's/polymorphism.ipynb
+++ b/1)Notes/8-OOP's/polymorphism.ipynb
@@ -87,7 +87,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#polymorphism with functions and methods \n",
+    "# Base class\n",
+    "\n",
+    "class Shape:\n",
+    "    def area(self):\n",
+    "        return \"the area of the figure\" \n",
+    "    \n",
+    "# Derived class 1\n",
+    "class rectangle(Shape):\n",
+    "    def __init__(self,width,height):\n",
+    "        self.width=width\n",
+    "        self.height=height\n",
+    "    def area(self):\n",
+    "        return self.height*self.width\n",
+    "    \n",
+    "# derived class 2\n",
+    "class Circle(Shape):\n",
+    "    def __init__(self,radius)\n"
+   ]
   }
  ],
  "metadata": {
