--- a/1)Notes/8-OOP's/polymorphism.ipynb
+++ b/1)Notes/8-OOP's/polymorphism.ipynb
@@ -84,9 +84,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The area is 20\n",
+      "The area is 78.5\n"
+     ]
+    }
+   ],
    "source": [
     "#polymorphism with functions and methods \n",
     "# Base class\n",
@@ -96,7 +105,7 @@
     "        return \"the area of the figure\" \n",
     "    \n",
     "# Derived class 1\n",
-    "class rectangle(Shape):\n",
+    "class Rectangle(Shape):\n",
     "    def __init__(self,width,height):\n",
     "        self.width=width\n",
     "        self.height=height\n",
@@ -105,7 +114,59 @@
     "    \n",
     "# derived class 2\n",
     "class Circle(Shape):\n",
-    "    def __init__(self,radius)\n"
+    "    def __init__(self,radius):\n",
+    "        self.radius = radius\n",
+    "\n",
+    "    def area(self):\n",
+    "      return 3.14*self.radius*self.radius\n",
+    "      \n",
+    "#function that demonstrate polymorphism\n",
+    "def print_area(shape):\n",
+    "    print(f\"The area is {shape.area()}\")\n",
+    "\n",
+    "\n",
+    "rectangle = Rectangle(4,5)\n",
+    "circle = Circle(5)\n",
+    "\n",
+    "print_area(rectangle)\n",
+    "print_area(circle)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Polymorphism with abstract base class\n",
+    "\n",
+    "\n",
+    "Abstrct base classes (ABCs) are used to define common methods for a group of related objects. They can enforce\n",
+    "that derived classes implement particular methods, promoting consistently across different implementations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "# Define abstract base class\n",
+    "class Vehicle(ABC):\n",
+    "    @abstractmethod\n",
+    "    def start_engine(self):\n",
+    "        pass\n",
+    "\n",
+    "# Derived class 1\n",
+    "class Car(Vehicle):\n",
+    "    def start_engine(self):\n",
+    "        return \"Car engine started\"\n",
+    "    \n",
+    "class Motorcycle(Vehicle):\n",
+    "    def start_engine(self):\n",
+    "        return \"Motorcycle engine started\"\n",
+    "    \n",
+    "# Function that demostrates polymorphism\n"
    ]
   }
  ],
