--- a/1)Notes/8-OOP's/polymorphism.ipynb
+++ b/1)Notes/8-OOP's/polymorphism.ipynb
@@ -145,9 +145,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Car engine started\n",
+      "Motorcycle engine started\n"
+     ]
+    }
+   ],
    "source": [
     "from abc import ABC, abstractmethod\n",
     "\n",
@@ -166,7 +175,15 @@
     "    def start_engine(self):\n",
     "        return \"Motorcycle engine started\"\n",
     "    \n",
-    "# Function that demostrates polymorphism\n"
+    "# Function that demostrates polymorphism\n",
+    "def start_vehicle(vehicle):\n",
+    "    print(vehicle.start_engine())\n",
+    "\n",
+    "car = Car()\n",
+    "motorcycle = Motorcycle()\n",
+    "\n",
+    "start_vehicle(car)\n",
+    "start_vehicle(motorcycle)"
    ]
   }
  ],
