--- a/1)Notes/8-OOP's/polymorphism.ipynb
+++ b/1)Notes/8-OOP's/polymorphism.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "two types of polymorphism is function overloading and operator overloading"
+    "polymorphism can be acheived through function overloading and operator overloading"
    ]
   },
   {
