--- a/1)Notes/8-OOP's/Encapsulation.ipynb
+++ b/1)Notes/8-OOP's/Encapsulation.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "Encapsulation --> It is the concept of wrapping data(variables) and methods(functions) together as a single unit.\n",
+    "\n",
     "Abstraction --> it involves hiding complex implementations details and exposing only the necessary features"
    ]
   },
@@ -13,7 +14,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Encapsulation with Getter and Setter methods"
+   ]
   }
  ],
  "metadata": {
