--- a/1)Notes/8-OOP's/Encapsulation.ipynb
+++ b/1)Notes/8-OOP's/Encapsulation.ipynb
@@ -11,12 +11,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'krish'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Encapsulation with Getter and Setter methods\n",
+    "# Access variables --> public, protected, private variables\n",
+    "\n",
+    "class Person:\n",
+    "    def __init__(self,name,age):\n",
+    "         self.name=name #public variables --> that access from outside the class\n",
+    "         self.age=age  \n",
+    "\n",
+    "def get_name(person):\n",
+    "     return person.name\n",
+    "\n",
+    "person = Person(\"krish\",34)\n",
+    "get_name(person)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "## Encapsulation with Getter and Setter methods"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -26,7 +56,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.7"
   }
  },
