--- a/1)Notes/8-OOP's/Encapsulation.ipynb
+++ b/1)Notes/8-OOP's/Encapsulation.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,11 @@
     " --> to define private variable use __ before variable\n",
     " --> Now we can't access this variable outside the class.\"\"\"\n",
     "\n",
-    "\n"
+    "\n",
+    "def get_name(person):\n",
+    "    return person.name\n",
+    "def get_gender(person):\n",
+    "    return person.gender"
    ]
   },
   {
@@ -155,6 +159,48 @@
    "source": [
     "person = Person(\"vaibhs\",20,\"Male\")\n",
     "dir(person) # only public variables are shown not private varibles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Person' object has no attribute 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mget_name\u001b[49m\u001b[43m(\u001b[49m\u001b[43mperson\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[10], line 12\u001b[0m, in \u001b[0;36mget_name\u001b[1;34m(person)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_name\u001b[39m(person):\n\u001b[1;32m---> 12\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mperson\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Person' object has no attribute 'name'"
+     ]
+    }
+   ],
+   "source": [
+    "get_name(person) #private variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Male'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_gender(person)"
    ]
   },
   {
