--- a/1)Notes/8-OOP's/Encapsulation.ipynb
+++ b/1)Notes/8-OOP's/Encapsulation.ipynb
@@ -277,10 +277,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "krish\n",
+      "34\n",
+      "MOdifying age\n",
+      "35\n",
+      "age never negative\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Encapsulation with Getter and Setter method\n",
+    "class Person:\n",
+    "    def __init__(self,name,age):\n",
+    "        self.__name=name #Private access modifier \n",
+    "        self.__age=age\n",
+    "\n",
+    "    # getter method for name --> used to access private variable\n",
+    "    def get_name(self):\n",
+    "        return self.__name\n",
+    "    \n",
+    "    # setter method for name --> used to modify private variable\n",
+    "    def set_name(self,name):\n",
+    "        self.__name=name\n",
+    "\n",
+    "    # Getter method for name\n",
+    "    def get_age(self):\n",
+    "        return self.__age\n",
+    "    \n",
+    "    # setter method for age\n",
+    "    def set_age(self,age):\n",
+    "        if age>0:\n",
+    "            self.__age=age\n",
+    "        else:\n",
+    "            print(\"age never negative\")\n",
+    "\n",
+    "person =Person(\"krish\",34)\n",
+    "## Access and modify private variables using getter and setter\n",
+    "print(person.get_name())\n",
+    "print(person.get_age())\n",
+    "\n",
+    "# modifying age\n",
+    "\n",
+    "print(\"MOdifying age\")\n",
+    "person.set_age(35)\n",
+    "print(person.get_age())\n",
+    "\n",
+    "person.set_age(-5)\n",
+    "\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
