--- a/1)Notes/8-OOP's/Abstraction.ipynb
+++ b/1)Notes/8-OOP's/Abstraction.ipynb
@@ -6,11 +6,42 @@
    "source": [
     "Abstraction is all about hiding implementation details and showing only the necessary details"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "# Abstract base class\n",
+    "class Vehicle(ABC):\n",
+    "    def drive(self):\n",
+    "        print(\"The vehicle is used for driving\")\n",
+    "    @abstractmethod\n",
+    "    def start_engine(self):\n",
+    "        pass\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
