--- a/1)Notes/8-OOP's/Abstraction.ipynb
+++ b/1)Notes/8-OOP's/Abstraction.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Car engine started\n"
+     ]
+    }
+   ],
    "source": [
     "from abc import ABC, abstractmethod\n",
     "\n",
@@ -22,15 +30,17 @@
     "    @abstractmethod\n",
     "    def start_engine(self):\n",
     "        pass\n",
-    "    "
+    "\n",
+    "class Car(Vehicle):\n",
+    "    def start_engine(self):\n",
+    "        print(\"Car engine started\")\n",
+    "\n",
+    "def operate_vehicle(vehicle):  # This function hides all implementation details using this function\n",
+    "    vehicle.start_engine()\n",
+    "\n",
+    "car = Car()\n",
+    "operate_vehicle(car)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -40,7 +50,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.7"
   }
  },
